# sxm-tmk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.conda/: LICENSE  meta.yaml
sxm_tmk/: __init__.py
sxm_tmk/cli/: clean.py  convert.py  create.py  sxm_tmk.py
sxm_tmk/converters/: base.py  pipenv.py
sxm_tmk/core/: bash.py  custom_types.py  dependency.py  models.py  types.py
sxm_tmk/core/conda/: cache.py  commands.py  file_lock_wrapper.py  repo.py  specifications.py
sxm_tmk/core/env_manager/pipenv/: lock.py
sxm_tmk/tests/: conftest.py  test_bash.py  test_contextual_execution_dir.py  test_dependency.py
sxm_tmk/tests/conda/: conftest.py  test_cache.py  test_cache_extractor.py  test_repo.py  test_specifications.py
sxm_tmk/tests/data/: cached_result_of_numpy.json
sxm_tmk/tests/pipenv/: test_lock.py
