[tool.poetry]
name = "sxm-tmk"
version = "1.1.1"
description = "One tool to rule your envs, one tool to find your requirements and in the brightness bind them all."
authors = ["Jean-Sébastien Dieu <jdieu@salsify.com>"]

packages = [{ include = "sxm_tmk" }]

exclude = ["sxm_tmk/tests"]

[[tool.poetry.source]]
name = "alkemics"
url = "https://pypi.alkemics.com:8443/simple"


[tool.poetry.dependencies]
python = "^3.8"
ujson = "^5.5.0"
filelock = "^3.8.0"
rich = "^12.5.1"
pyyaml = "^6.0"
packaging = "^21.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
alk-ci = "^1.1.44"
pytest = "^7.1.3"
types-PyYAML = "^6.0.11"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
